Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82112

Double sided rendering is wrong with d3d, vulkan, metal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 6.0.0
    • Qt RHI, Quick: 3D
    • None

      When culling is disabled, special logic is triggered in the default material shader code to make both faces behave correctly wrt lighting (i.e. the normals are adjusted on the fly).

      OpenGL looks correct with and without RHI.

      However, the calculations are not quite compatible with the left handed world (Vulkan, D3D, Metal).

        For Gerrit Dashboard: QTBUG-82112
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes