Enable correct double sided rendering with D3D, Vulkan, Metal

Task-number: QTBUG-82112
Change-Id: I722f21a0829f1cea6d72e3b60836f84b995dee20
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>